2005-06-23  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b37

	* Change: getRequestVar to stripslashes recursively into arrays

2005-06-21 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b36

	* Change: Possibility to set columnCount to -1 for ALL elements in one row.
		  (Fixes unnice lang selector with flags)

	* Fix: Comments display was borked when not logged with admin/owner permission.

	* Fix: added <br clear="all"> under language selector for proper table rendering in FF

2005-06-21 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b35

	* New: Added slightly modified Patch #875893 from Alan Harder.
	       This adds a popup in which you can nicely reorder your item via clicking.

2005-06-21 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b34

	* Change: enhanced fitToWindow for panorama photos.
		  Found by 'bolet' from the forums.

2005-06-20 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b33

	* Fix: Override in getIconText

	* Change: css class in layout/navmicro.inc

	* Change: css for iconLinks in view_photo.php and removed sorting for actions.

	* Change: replaced "delete comment" under each comment with a little icon to save space.
		  And css change.

2005-06-19 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b32

	* Change: moved some messages functions into lib/messages.php
		  created new message functions for:
		  - infolines
		  - debugmessages

	* Change: Added infoline and tweaked Emailtext in create_user.php

	* Change: Added infoline in modify_user.php

	* Change: Modified config var "debug" yes/no to "debuglevel" 0 means no debug.
		  Tweaked isDebugging to recognize the level.
		  Now you can give a Parameter to ask if debug in in given level.

	* Change: stats-wizard.php, var 'sgr' renamed to 'showGrid'

	* CHANGE: stats-php
		  - lots of indenting
		  - The complete statstable is now generated via class galleryTable !!
		    o Thumbs are now just as they are, not anymore like in the albums.
		    o show Commentes code tweaked to work with galleryTable