@@ -67,6 +67,7 @@
 ../lib/Form.php
 ../lib/lang.php
 ../lib/voting.php
+../lib/albumItem.php
 ../login.php
 ../manage_users.php
 ../modify_user.php
@@ -80,6 +81,7 @@
 ../progress_uploading.php
 ../publish_xp.php
 ../publish_xp_docs.php
+../rearrange.php
 ../register.php 
 ../rename_album.php
 ../reset_votes.php
