@@ -200,7 +200,7 @@ if (!empty($save)) {
 		$comment_text = removeTags($comment_text);
 		$commenter_name = removeTags($commenter_name);
 		$IPNumber = $_SERVER['REMOTE_ADDR'];
-		$gallery->album->addComment($id, stripslashes($comment_text), $IPNumber, $commenter_name);
+		$gallery->album->addComment($id, $comment_text, $IPNumber, $commenter_name);
 		$gallery->album->save();
 		emailComments($id, $comment_text, $commenter_name);
 	}
