@@ -1,3 +1,9 @@
+2005-06-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b38
+
+	* Fix: Bug #1217095, removed double stripslashes that breakes e.g. chinese.
+
+	* Fix: Added missing files to translation list for core.
+
 2005-06-23  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b37
 
 	* Change: getRequestVar to stripslashes recursively into arrays
